--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.cloud.stream.bindings.todoUpdatedEvent.destination=todoUpdatedEvent
 spring.cloud.stream.bindings.todoDeletedEvent.destination=todoDeletedEvent
 management.endpoints.web.base-path=/ops
 management.endpoints.web.exposure.include=*
+-Deureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
