commit before br workshop

--- a/manifest.yml
+++ b/manifest.yml
@@ -11,4 +11,4 @@ applications:
    - todos-cache
    - todos-messaging
   env:
-    JAVA_OPTS: '-Deureka.client.serviceUrl.defaultZone=http://cloud-index.apps.pcf.corbscloud.io/eureka'
+    JAVA_OPTS: '-Deureka.client.serviceUrl.defaultZone=http://cloud-index.apps.pcf.corbscloud.io/eureka/'
