--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,1 +1,6 @@
 spring.application.name=todos-cache
+#eureka.instance.hostname=todos-cache.apps.pcf.corbscloud.io
+#eureka.instance.instance-id=todos-cache
+#eureka.instance.home-page-url=http://todos-cache.apps.pcf.corbscloud.io
+eureka.instance.status-page-url=http://localhost:${server.port}/ops/info
+eureka.instance.health-check-url=http://localhost:${server.port}/ops/health
