--- a/manifest.yml
+++ b/manifest.yml
@@ -3,12 +3,11 @@ applications:
 - name: todos-cache
   memory: 1G
   routes:
-  - route: todos-cache.apps.pcf.corbscloud.io
-  - route: todos-cache-1-0-0-RELEASE.apps.pcf.corbscloud.io
-  path: target/todos-cache-1.0.0.RELEASE.jar
+  - route: todos-cache.cfapps.io
+  path: target/todos-cache-1.0.0.SNAP.jar
   buildpack: java_buildpack
   services:
    - todos-cache
    - todos-messaging
   env:
-    JAVA_OPTS: '-Deureka.client.serviceUrl.defaultZone=http://cloud-index.apps.pcf.corbscloud.io/eureka/'
+    JAVA_OPTS: '-Deureka.client.serviceUrl.defaultZone=http://cloud-index.cfapps.io/eureka/'
