--- a/manifest.yml
+++ b/manifest.yml
@@ -1,13 +1,14 @@
 ---
 applications:
-- name: todos-cache
-  memory: 1G
+- name: ((app.name))
+  memory: ((app.memory))
   routes:
-  - route: todos-cache.cfapps.io
-  path: target/todos-cache-1.0.0.SNAP.jar
+  - route: ((app.route))
+  path: ((app.artifact))
   buildpack: java_buildpack
-  services:
-   - todos-cache
-   - todos-messaging
   env:
-    JAVA_OPTS: '-Deureka.client.serviceUrl.defaultZone=http://cloud-index.cfapps.io/eureka/'
+    ((env-key-1)): ((env-val-1))
+    ((env-key-2)): ((env-val-2))
+  services:
+   - ((srv-key-1))
+   - ((srv-key-2))
