--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,13 +5,13 @@ spring:
         stream:
             bindings:
                 onCreatedEvent:
-                    destination: todoCreatedEvent
+                    destination: createdEvent
                 onDeletedEvent:
-                    destination: todoDeletedEvent
+                    destination: deletedEvent
                 onUpdatedEvent:
-                    destination: todoUpdatedEvent
+                    destination: updatedEvent
                 fireCreatedEvent:
-                    destination: todoCreatedEvent
+                    destination: createdEvent
 eureka:
     client:
         serviceUrl:
