--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,4 +3,4 @@ spring:
     name: todos-cache
   cloud:
     config:
-      uri: ${SPRING_CONFIG_URI:http://localhost:8888}
+      uri: ${CONFIG_SERVER_URI:http://localhost:8888}
